--- a/drf_backend/requirements.txt
+++ b/drf_backend/requirements.txt
@@ -3,6 +3,9 @@ Django==5.0.4
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+inflection==0.5.1
 PyJWT==2.8.0
+PyYAML==6.0.1
 sqlparse==0.4.4
 typing_extensions==4.11.0
+uritemplate==4.1.1
